syntax = 'proto3';

package warehouse.v1alpha0;

option go_package = "github.com/materials-resources/s_prophet/proto/warehouse/v1alpha0";

service WarehouseService {
  rpc GetAllocatedOrdersForReceiptItem(GetAllocatedOrdersForReceiptItemRequest) returns (GetAllocatedOrdersForReceiptItemResponse);
  rpc GetReceivingReport(GetReceivingReportRequest) returns (GetReceivingReportResponse);
  rpc GetPickTicket(GetPickTicketRequest) returns (GetPickTicketResponse);
}

message GetAllocatedOrdersForReceiptItemRequest{
  int32 receipt_id = 1; // Receipt id to search for
  int32 product_id = 2; // Identifier of product
  repeated string primary_bins = 3; // List of primary bins to filter products by. Helpful for only returning orders for nonstock
}

message GetAllocatedOrdersForReceiptItemResponse{
  message AllocatedOrder {
    string id = 1; // Identifier of allocated order
    float qty = 2; // Quantity of product allocated to order
  }
  repeated AllocatedOrder allocated_orders = 1;
}

message GetReceivingReportRequest {
  int32 id = 1; // Identifier of receipt
}

message GetReceivingReportResponse {

  message Product {
    int32 id = 1; // Identifier of product
    float qty = 2; // Quantity of product received
    string unit_of_measure = 3;
  }

  repeated Product products = 1;
}

message GetPickTicketRequest {
  int32 id = 1;  //Identifier of pick ticket
}

message GetPickTicketResponse {
  string order_id = 1; //Order Identifier belonging to pick ticket
}